--- a/provider-dev.yml
+++ b/provider-dev.yml
@@ -21,4 +21,4 @@ spring:
   application:
     name: EUREKA-PROVIDER # 设置当前应用的名称。将来会在eureka中Application显示。将来需要使用该名称来获取路径
 
-bld: ssaatt
+bld: ssaattq
